﻿drkns 16.02.2014 19:18:25 +0200 - build 3810

1. Некорректно устанавливались флаги 0x10 и 0x20 в Editor.State.

2. Некорректно переключался язык интерфейса.

3. Рефакторинг.

drkns 15.02.2014 13:30:44 +0200 - build 3809

1. Сторонние библиотеки (UCD, sqlite, tinyxml) переехали в thirdparty.

drkns 14.02.2014 19:33:07 +0200 - build 3808

1. 0002600: Far doesn't load plugins with the same dll-name

svs 14.02.2014 09:40:25 +0400 - build 3807

1. SQLite 3.8.3.1

drkns 13.02.2014 20:56:37 +0200 - build 3806

1. Размер буфера копирования не мог быть меньше 64 К.

2. Копированиие в nul не использовало системную функцию.

drkns 13.02.2014 00:23:02 +0200 - build 3805

1. VC10.

drkns 13.02.2014 00:10:00 +0200 - build 3804

1. GCC-билд мог причудливо падать при создании плагином диалога с обработчиком.

2. Теперь ошибка переключения языка не приводит к завершению процессса.

3. Рефакторинг.

shmuel 12.02.2014 18:00:50 +0200 - build 3803

1. Не инициализировалось состояние чекбокса "Size" в диалоге создания фильтра файлов.

w17 11.02.2014 17:41:29 +0400 - build 3802

1. Уточнение 3801

w17 11.02.2014 13:59:15 +0400 - build 3801

1. Длинные имена в диалоге удаления (с форума)

drkns 08.02.2014 12:39:25 +0200 - build 3800

1. 0002577: Не работает сдвиг блока для строки с одним символом

zg 08.02.2014 03:38:56 +0200 - build 3799

1. уточнение 3794:
   при смене кодировки в редакторе любая пустая строка вызывает сообщение:
   "Редактор содержит символы, которые невозможно корректно преобразовать, используя выбранную кодовую страницу."

zg 06.02.2014 23:38:11 +0200 - build 3798

1. DM_GETDLGITEM для элементов DI_LISTBOX и DI_COMBOBOX возвращает текущий список, а не список,
   которым они инициализировались при создании.

w17 06.02.2014 01:14:29 +0400 - build 3797

1. vc++ 2010 fix

drkns 05.02.2014 20:45:24 +0200 - build 3796

1. Уточнение 3794.

svs 05.02.2014 12:25:36 +0400 - build 3795

1. SQLite 3.8.3

drkns 05.02.2014 09:43:50 +0200 - build 3794

1. Analyzer warnings.
