@@ -1,4 +1,8 @@
-﻿drkns 16.02.2014 19:18:25 +0200 - build 3810
+﻿drkns 17.02.2014 00:03:05 +0200 - build 3811
+
+1. Уточнение 3811.
+
+drkns 16.02.2014 19:18:25 +0200 - build 3810
 
 1. Некорректно устанавливались флаги 0x10 и 0x20 в Editor.State.
 
